--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 click==8.1.7
 Flask==2.0.1
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+packaging==24.1
 Werkzeug==2.0.1
